# serializer version: 1
# name: test_sensor[sensor-0123456789ab_ambient_temperature-status;ambient]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': "Johny's Traeger Ambient Temperature",
      'icon': 'mdi:thermometer',
      'unit_of_measurement': <UnitOfTemperature.FAHRENHEIT: '°F'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0123456789ab_ambient_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor[sensor-0123456789ab_ambient_temperature-status;ambient].1
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': '',
      'device_class': 'temperature',
      'friendly_name': "Johny's Traeger Ambient Temperature",
      'icon': 'mdi:thermometer',
      'integration': 'traeger',
      'unit_of_measurement': <UnitOfTemperature.FAHRENHEIT: '°F'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0123456789ab_ambient_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '60',
  })
# ---
# name: test_sensor[sensor-0123456789ab_ambient_temperature-status;ambient].2
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': '',
      'device_class': 'temperature',
      'friendly_name': "Johny's Traeger Ambient Temperature",
      'icon': 'mdi:thermometer',
      'integration': 'traeger',
      'unit_of_measurement': <UnitOfTemperature.FAHRENHEIT: '°F'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0123456789ab_ambient_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '22',
  })
# ---
# name: test_sensor[sensor-0123456789ab_ambient_temperature-status;ambient].3
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': "Johny's Traeger Ambient Temperature",
      'icon': 'mdi:thermometer',
      'unit_of_measurement': <UnitOfTemperature.FAHRENHEIT: '°F'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0123456789ab_ambient_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_platform
  list([
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_ambient_temperature',
      'original_name': '0123456789ab Ambient Temperature',
      'translation_key': None,
      'unique_id': '0123456789ab_ambient',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_auger_runtime',
      'original_name': '0123456789ab Auger Runtime',
      'translation_key': None,
      'unique_id': '0123456789ab_auger',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_cook_cycle',
      'original_name': '0123456789ab Cook Cycle',
      'translation_key': None,
      'unique_id': '0123456789ab_cook_cycles',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_cook_id',
      'original_name': '0123456789ab Cook ID',
      'translation_key': None,
      'unique_id': '0123456789ab_cook_id',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_cook_timer_end',
      'original_name': '0123456789ab Cook Timer End',
      'translation_key': None,
      'unique_id': '0123456789ab_cook_timer_end',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_cook_timer_start',
      'original_name': '0123456789ab Cook Timer Start',
      'translation_key': None,
      'unique_id': '0123456789ab_cook_timer_start',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_current_cycle',
      'original_name': '0123456789ab Current Cycle',
      'translation_key': None,
      'unique_id': '0123456789ab_current_cycle',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_current_step',
      'original_name': '0123456789ab Current Step',
      'translation_key': None,
      'unique_id': '0123456789ab_current_step',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_errors',
      'original_name': '0123456789ab Errors',
      'translation_key': None,
      'unique_id': '0123456789ab_errors',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_fan_runtime',
      'original_name': '0123456789ab Fan Runtime',
      'translation_key': None,
      'unique_id': '0123456789ab_fan',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_grill_connected',
      'original_name': '0123456789ab Grill Connected',
      'translation_key': None,
      'unique_id': '0123456789ab_connected',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_grill_runtime',
      'original_name': '0123456789ab Grill Runtime',
      'translation_key': None,
      'unique_id': '0123456789ab_runtime',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_grill_state',
      'original_name': '0123456789ab Grill State',
      'translation_key': None,
      'unique_id': '0123456789ab_grill_state',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_grill_time',
      'original_name': '0123456789ab Grill Time',
      'translation_key': None,
      'unique_id': '0123456789ab_time',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_heating_state',
      'original_name': '0123456789ab Heating State',
      'translation_key': None,
      'unique_id': '0123456789ab_heating_state',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_hotrod_runtime',
      'original_name': '0123456789ab Hotrod Runtime',
      'translation_key': None,
      'unique_id': '0123456789ab_hotrod',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_ignite_fail_count',
      'original_name': '0123456789ab Ignite Fail Count',
      'translation_key': None,
      'unique_id': '0123456789ab_ignite_fail',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_lowtemp_count',
      'original_name': '0123456789ab Lowtemp Count',
      'translation_key': None,
      'unique_id': '0123456789ab_lowtemp',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_overheat_count',
      'original_name': '0123456789ab Overheat Count',
      'translation_key': None,
      'unique_id': '0123456789ab_overheat',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_pellet_level',
      'original_name': '0123456789ab Pellet Level',
      'translation_key': None,
      'unique_id': '0123456789ab_pellet_level',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_server_status',
      'original_name': '0123456789ab Server Status',
      'translation_key': None,
      'unique_id': '0123456789ab_server_status',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_state_index_count',
      'original_name': '0123456789ab State Index Count',
      'translation_key': None,
      'unique_id': '0123456789ab_stateIndex',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_sys_timer_end',
      'original_name': '0123456789ab Sys Timer End',
      'translation_key': None,
      'unique_id': '0123456789ab_sys_timer_end',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_sys_timer_start',
      'original_name': '0123456789ab Sys Timer Start',
      'translation_key': None,
      'unique_id': '0123456789ab_sys_timer_start',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_wifi_rssi',
      'original_name': '0123456789ab WifI RSSI',
      'translation_key': None,
      'unique_id': '0123456789ab_rssi',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_wifi_ssid',
      'original_name': '0123456789ab WifI SSID',
      'translation_key': None,
      'unique_id': '0123456789ab_ssid',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_ambient_temperature',
      'original_name': 'cd0123456789 Ambient Temperature',
      'translation_key': None,
      'unique_id': 'cd0123456789_ambient',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_auger_runtime',
      'original_name': 'cd0123456789 Auger Runtime',
      'translation_key': None,
      'unique_id': 'cd0123456789_auger',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_cook_cycle',
      'original_name': 'cd0123456789 Cook Cycle',
      'translation_key': None,
      'unique_id': 'cd0123456789_cook_cycles',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_cook_id',
      'original_name': 'cd0123456789 Cook ID',
      'translation_key': None,
      'unique_id': 'cd0123456789_cook_id',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_cook_timer_end',
      'original_name': 'cd0123456789 Cook Timer End',
      'translation_key': None,
      'unique_id': 'cd0123456789_cook_timer_end',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_cook_timer_start',
      'original_name': 'cd0123456789 Cook Timer Start',
      'translation_key': None,
      'unique_id': 'cd0123456789_cook_timer_start',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_current_cycle',
      'original_name': 'cd0123456789 Current Cycle',
      'translation_key': None,
      'unique_id': 'cd0123456789_current_cycle',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_current_step',
      'original_name': 'cd0123456789 Current Step',
      'translation_key': None,
      'unique_id': 'cd0123456789_current_step',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_errors',
      'original_name': 'cd0123456789 Errors',
      'translation_key': None,
      'unique_id': 'cd0123456789_errors',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_fan_runtime',
      'original_name': 'cd0123456789 Fan Runtime',
      'translation_key': None,
      'unique_id': 'cd0123456789_fan',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_grill_connected',
      'original_name': 'cd0123456789 Grill Connected',
      'translation_key': None,
      'unique_id': 'cd0123456789_connected',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_grill_runtime',
      'original_name': 'cd0123456789 Grill Runtime',
      'translation_key': None,
      'unique_id': 'cd0123456789_runtime',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_grill_state',
      'original_name': 'cd0123456789 Grill State',
      'translation_key': None,
      'unique_id': 'cd0123456789_grill_state',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_grill_time',
      'original_name': 'cd0123456789 Grill Time',
      'translation_key': None,
      'unique_id': 'cd0123456789_time',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_heating_state',
      'original_name': 'cd0123456789 Heating State',
      'translation_key': None,
      'unique_id': 'cd0123456789_heating_state',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_hotrod_runtime',
      'original_name': 'cd0123456789 Hotrod Runtime',
      'translation_key': None,
      'unique_id': 'cd0123456789_hotrod',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_ignite_fail_count',
      'original_name': 'cd0123456789 Ignite Fail Count',
      'translation_key': None,
      'unique_id': 'cd0123456789_ignite_fail',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_lowtemp_count',
      'original_name': 'cd0123456789 Lowtemp Count',
      'translation_key': None,
      'unique_id': 'cd0123456789_lowtemp',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_overheat_count',
      'original_name': 'cd0123456789 Overheat Count',
      'translation_key': None,
      'unique_id': 'cd0123456789_overheat',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_pellet_level',
      'original_name': 'cd0123456789 Pellet Level',
      'translation_key': None,
      'unique_id': 'cd0123456789_pellet_level',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_server_status',
      'original_name': 'cd0123456789 Server Status',
      'translation_key': None,
      'unique_id': 'cd0123456789_server_status',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_state_index_count',
      'original_name': 'cd0123456789 State Index Count',
      'translation_key': None,
      'unique_id': 'cd0123456789_stateIndex',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_sys_timer_end',
      'original_name': 'cd0123456789 Sys Timer End',
      'translation_key': None,
      'unique_id': 'cd0123456789_sys_timer_end',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_sys_timer_start',
      'original_name': 'cd0123456789 Sys Timer Start',
      'translation_key': None,
      'unique_id': 'cd0123456789_sys_timer_start',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_wifi_rssi',
      'original_name': 'cd0123456789 WifI RSSI',
      'translation_key': None,
      'unique_id': 'cd0123456789_rssi',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_wifi_ssid',
      'original_name': 'cd0123456789 WifI SSID',
      'translation_key': None,
      'unique_id': 'cd0123456789_ssid',
    }),
  ])
# ---
# name: test_sensor_platform_asyncadd
  list([
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_ambient_temperature',
      'original_name': '0123456789ab Ambient Temperature',
      'translation_key': None,
      'unique_id': '0123456789ab_ambient',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_auger_runtime',
      'original_name': '0123456789ab Auger Runtime',
      'translation_key': None,
      'unique_id': '0123456789ab_auger',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_cook_cycle',
      'original_name': '0123456789ab Cook Cycle',
      'translation_key': None,
      'unique_id': '0123456789ab_cook_cycles',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_cook_id',
      'original_name': '0123456789ab Cook ID',
      'translation_key': None,
      'unique_id': '0123456789ab_cook_id',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_cook_timer_end',
      'original_name': '0123456789ab Cook Timer End',
      'translation_key': None,
      'unique_id': '0123456789ab_cook_timer_end',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_cook_timer_start',
      'original_name': '0123456789ab Cook Timer Start',
      'translation_key': None,
      'unique_id': '0123456789ab_cook_timer_start',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_current_cycle',
      'original_name': '0123456789ab Current Cycle',
      'translation_key': None,
      'unique_id': '0123456789ab_current_cycle',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_current_step',
      'original_name': '0123456789ab Current Step',
      'translation_key': None,
      'unique_id': '0123456789ab_current_step',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_errors',
      'original_name': '0123456789ab Errors',
      'translation_key': None,
      'unique_id': '0123456789ab_errors',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_fan_runtime',
      'original_name': '0123456789ab Fan Runtime',
      'translation_key': None,
      'unique_id': '0123456789ab_fan',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_grill_connected',
      'original_name': '0123456789ab Grill Connected',
      'translation_key': None,
      'unique_id': '0123456789ab_connected',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_grill_runtime',
      'original_name': '0123456789ab Grill Runtime',
      'translation_key': None,
      'unique_id': '0123456789ab_runtime',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_grill_state',
      'original_name': '0123456789ab Grill State',
      'translation_key': None,
      'unique_id': '0123456789ab_grill_state',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_grill_time',
      'original_name': '0123456789ab Grill Time',
      'translation_key': None,
      'unique_id': '0123456789ab_time',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_heating_state',
      'original_name': '0123456789ab Heating State',
      'translation_key': None,
      'unique_id': '0123456789ab_heating_state',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_hotrod_runtime',
      'original_name': '0123456789ab Hotrod Runtime',
      'translation_key': None,
      'unique_id': '0123456789ab_hotrod',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_ignite_fail_count',
      'original_name': '0123456789ab Ignite Fail Count',
      'translation_key': None,
      'unique_id': '0123456789ab_ignite_fail',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_lowtemp_count',
      'original_name': '0123456789ab Lowtemp Count',
      'translation_key': None,
      'unique_id': '0123456789ab_lowtemp',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_overheat_count',
      'original_name': '0123456789ab Overheat Count',
      'translation_key': None,
      'unique_id': '0123456789ab_overheat',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_pellet_level',
      'original_name': '0123456789ab Pellet Level',
      'translation_key': None,
      'unique_id': '0123456789ab_pellet_level',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_probe_state_12charid1',
      'original_name': "Johny's Traeger Probe State 12charId1",
      'translation_key': None,
      'unique_id': '0123456789ab_probe_state_12charId1',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_probe_state_12charid2',
      'original_name': "Johny's Traeger Probe State 12charId2",
      'translation_key': None,
      'unique_id': '0123456789ab_probe_state_12charId2',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_probe_state_p0',
      'original_name': "Johny's Traeger Probe State p0",
      'translation_key': None,
      'unique_id': '0123456789ab_probe_state_p0',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_server_status',
      'original_name': '0123456789ab Server Status',
      'translation_key': None,
      'unique_id': '0123456789ab_server_status',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_state_index_count',
      'original_name': '0123456789ab State Index Count',
      'translation_key': None,
      'unique_id': '0123456789ab_stateIndex',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_sys_timer_end',
      'original_name': '0123456789ab Sys Timer End',
      'translation_key': None,
      'unique_id': '0123456789ab_sys_timer_end',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_sys_timer_start',
      'original_name': '0123456789ab Sys Timer Start',
      'translation_key': None,
      'unique_id': '0123456789ab_sys_timer_start',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_wifi_rssi',
      'original_name': '0123456789ab WifI RSSI',
      'translation_key': None,
      'unique_id': '0123456789ab_rssi',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.0123456789ab_wifi_ssid',
      'original_name': '0123456789ab WifI SSID',
      'translation_key': None,
      'unique_id': '0123456789ab_ssid',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_ambient_temperature',
      'original_name': 'cd0123456789 Ambient Temperature',
      'translation_key': None,
      'unique_id': 'cd0123456789_ambient',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_auger_runtime',
      'original_name': 'cd0123456789 Auger Runtime',
      'translation_key': None,
      'unique_id': 'cd0123456789_auger',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_cook_cycle',
      'original_name': 'cd0123456789 Cook Cycle',
      'translation_key': None,
      'unique_id': 'cd0123456789_cook_cycles',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_cook_id',
      'original_name': 'cd0123456789 Cook ID',
      'translation_key': None,
      'unique_id': 'cd0123456789_cook_id',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_cook_timer_end',
      'original_name': 'cd0123456789 Cook Timer End',
      'translation_key': None,
      'unique_id': 'cd0123456789_cook_timer_end',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_cook_timer_start',
      'original_name': 'cd0123456789 Cook Timer Start',
      'translation_key': None,
      'unique_id': 'cd0123456789_cook_timer_start',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_current_cycle',
      'original_name': 'cd0123456789 Current Cycle',
      'translation_key': None,
      'unique_id': 'cd0123456789_current_cycle',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_current_step',
      'original_name': 'cd0123456789 Current Step',
      'translation_key': None,
      'unique_id': 'cd0123456789_current_step',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_errors',
      'original_name': 'cd0123456789 Errors',
      'translation_key': None,
      'unique_id': 'cd0123456789_errors',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_fan_runtime',
      'original_name': 'cd0123456789 Fan Runtime',
      'translation_key': None,
      'unique_id': 'cd0123456789_fan',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_grill_connected',
      'original_name': 'cd0123456789 Grill Connected',
      'translation_key': None,
      'unique_id': 'cd0123456789_connected',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_grill_runtime',
      'original_name': 'cd0123456789 Grill Runtime',
      'translation_key': None,
      'unique_id': 'cd0123456789_runtime',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_grill_state',
      'original_name': 'cd0123456789 Grill State',
      'translation_key': None,
      'unique_id': 'cd0123456789_grill_state',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_grill_time',
      'original_name': 'cd0123456789 Grill Time',
      'translation_key': None,
      'unique_id': 'cd0123456789_time',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_heating_state',
      'original_name': 'cd0123456789 Heating State',
      'translation_key': None,
      'unique_id': 'cd0123456789_heating_state',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_hotrod_runtime',
      'original_name': 'cd0123456789 Hotrod Runtime',
      'translation_key': None,
      'unique_id': 'cd0123456789_hotrod',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_ignite_fail_count',
      'original_name': 'cd0123456789 Ignite Fail Count',
      'translation_key': None,
      'unique_id': 'cd0123456789_ignite_fail',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_lowtemp_count',
      'original_name': 'cd0123456789 Lowtemp Count',
      'translation_key': None,
      'unique_id': 'cd0123456789_lowtemp',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_overheat_count',
      'original_name': 'cd0123456789 Overheat Count',
      'translation_key': None,
      'unique_id': 'cd0123456789_overheat',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_pellet_level',
      'original_name': 'cd0123456789 Pellet Level',
      'translation_key': None,
      'unique_id': 'cd0123456789_pellet_level',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_server_status',
      'original_name': 'cd0123456789 Server Status',
      'translation_key': None,
      'unique_id': 'cd0123456789_server_status',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_state_index_count',
      'original_name': 'cd0123456789 State Index Count',
      'translation_key': None,
      'unique_id': 'cd0123456789_stateIndex',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_sys_timer_end',
      'original_name': 'cd0123456789 Sys Timer End',
      'translation_key': None,
      'unique_id': 'cd0123456789_sys_timer_end',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_sys_timer_start',
      'original_name': 'cd0123456789 Sys Timer Start',
      'translation_key': None,
      'unique_id': 'cd0123456789_sys_timer_start',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_wifi_rssi',
      'original_name': 'cd0123456789 WifI RSSI',
      'translation_key': None,
      'unique_id': 'cd0123456789_rssi',
    }),
    dict({
      'device_class': None,
      'entity_id': 'sensor.cd0123456789_wifi_ssid',
      'original_name': 'cd0123456789 WifI SSID',
      'translation_key': None,
      'unique_id': 'cd0123456789_ssid',
    }),
  ])
# ---
